# shootsh

./: .gitattributes  .gitignore  Cargo.toml  README.md  THIRD-PARTY-LICENSES.html  about.toml
crates/shootsh_cli/: Cargo.toml
crates/shootsh_cli/src/: main.rs
crates/shootsh_core/: Cargo.toml
crates/shootsh_core/src/: anticheat.rs  app.rs  db.rs  domain.rs  lib.rs  logo.txt  ui.rs  validator.rs
crates/shootsh_ssh/: Cargo.toml
crates/shootsh_ssh/src/: input.rs  main.rs  server.rs
deploy/: .env.example  README.md
deploy/systemd/: shootsh-gen-html.service  shootsh-gen-html.timer  shootsh.service
deploy/www/: Caddyfile  generate_html.sh  index_template.html
src/: app.rs  db.rs  domain.rs  logo.txt  main.rs  ui.rs  validator.rs
www/: generate_html.sh
