[package]
name = "shootsh_cli"
version = "0.1.0"
edition = "2024"
license = "Unlicense"

[dependencies]
shootsh_core = { path = "../shootsh_core" }
anyhow = "1.0.100"
chrono = "0.4.43"
crossterm = "0.27"
rand = "0.9.2"
ratatui = "0.30.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
tokio = { version = "1.49.0", features = ["full"] }
arc-swap = "1.8.0"
