[package]
name = "shootsh_ssh"
version = "0.1.0"
edition = "2024"

[dependencies]
shootsh_core = { path = "../shootsh_core" }

tokio = { version = "1.49.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.31"

russh = "0.56.0"
# russh-keys = "0.49.2"

anyhow = "1.0.100"
chrono = "0.4.43"
crossterm = "0.27"
rand = "0.9.2"
ratatui = "0.30.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
termwiz = "0.23.3"
arc-swap = "1.8.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
